# grammar-school

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  PYPI_SETUP.md  README.md  RELEASING.md  SPEC.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: docs.yml  go-docker.yml  go.yml  pre-commit.yml  python-docker.yml  python.yml  release.yml
contributing/: index.html
docker/: README.md
docker/go/: Dockerfile
docker/python/: Dockerfile
docs/: README.md  contributing.md  index.md  mkdocs.yml  specification.md
docs/examples/: building-dsl.md  gpt-integration.md  json-vs-dsl-walkthrough.md  music-dsl.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/go/: api-reference.md  core-types.md  engine.md  overview.md  runtime.md
docs/python/: api-reference.md  core-types.md  grammar.md  interpreter.md  overview.md  runtime.md
examples/building-dsl/: index.html
examples/gpt-integration/: index.html
examples/json-vs-dsl-walkthrough/: index.html
examples/music-dsl/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
go/: .golangci.yml  README.md  go.mod
go/api-reference/: index.html
go/core-types/: index.html
go/engine/: index.html
go/examples/: README.md  functional_dsl.go  music_dsl.go
go/examples/functional_dsl/: main.go
go/examples/music_dsl/: main.go
go/gs/: action.go  ast.go  ast_test.go  cfg_vendor.go  context.go  engine.go  engine_test.go  functional.go  parser_backend.go  runtime.go  version.go
go/overview/: index.html
go/runtime/: index.html
python/: README.md  pyproject.toml
python/api-reference/: index.html
python/core-types/: index.html
python/examples/: README.md  functional_dsl.py  gpt_integration.py  grammar_builder_example.py  grammar_config_example.py  mock_mcp_server.py  music_dsl.py  test_mcp_server_local.py
python/examples/json_vs_dsl_comparison/: README.md  __init__.py  basic_grammar.py  comparison.py  domain_specific_language.py  progression_test.py  structured_output.py  test_structured_output.py
python/grammar/: index.html
python/grammar_school/: __init__.py  ast.py  backend_lark.py  cfg_vendor.py  functional.py  grammar.py  interpreter.py  openai_utils.py  runtime.py  smart_transformer.py  version.py
python/interpreter/: index.html
python/overview/: index.html
python/runtime/: index.html
python/tests/: __init__.py  test_ast.py  test_backend_lark.py  test_functional.py  test_grammar.py  test_openai_utils.py  test_runtime.py
scripts/: update_version.py
search/: search_index.json
specification/: index.html
